@@ -65,10 +65,10 @@ module ActiveScaffold
 
       def render_parent_options
         if nested_singular_association?
-          {:controller => nested.parent_scaffold.controller_path, :action => :row, :id => nested.parent_id}
+          {:controller => nested.parent_scaffold.controller_path, :action => :index, :id => nested.parent_id}
         elsif params[:parent_sti]
           options = params_for(:controller => params[:parent_sti], :action => render_parent_action, :parent_sti => nil)
-          options.merge(:id => @record.id) if render_parent_action == :row
+          options.merge(:action => :index, :id => @record.id) if render_parent_action == :row
         end
       end
 
